[tool.poetry]
authors = ["Saito Tsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "`mip-tool` is a package for Python-MIP."
homepage = "https://github.com/SaitoTsutomu/mip-tool"
license = "Apache-2.0"
name = "mip-tool"
readme = "README.md"
version = "0.3.1"

[tool.poetry.scripts]
mip_tool = "mip_tool.view:main"

[tool.poetry.dependencies]
mip = {version = "^1.15", python = "<3.12"}
# change to ^2.0 at later
pandas = ">=1.5.3"
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.7"
flake8 = "^6.1"
isort = "^5.12"
jupyterlab = "^4.0"
mypy = "^1.5"
pytest = "^7.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
