[tool.poetry]
authors = ["Saito Tsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "`mip-tool` is a package for Python-MIP."
homepage = "https://github.com/SaitoTsutomu/mip-tool"
license = "Apache-2.0"
name = "mip-tool"
readme = "README.md"
version = "0.4.0"

[tool.poetry.scripts]
mip_tool = "mip_tool.view:main"

[tool.poetry.dependencies]
mip = "=1.14.2"
pandas = "^2.2"
python = "^3.12"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0"
mypy = "^1.11"
pytest = "^8.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
