[project]
authors = [{name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"}]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "mip>=1.14.2",
  "pandas>=2.2.3",
]
description = "`mip-tool` is a package for Python-MIP."
license = {text = "Apache-2.0"}
name = "mip-tool"
readme = "README.md"
requires-python = ">=3.11"
version = "0.6.4"

[project.urls]
homepage = "https://github.com/SaitoTsutomu/mip-tool"

[tool.uv]
dev-dependencies = [
  "jupyterlab>=4.3.4",
  "pulp>=2.9.0",
  "pytest>=8.3.4",
]

[project.scripts]
mip_tool = "mip_tool.view:main"

[project.optional-dependencies]
pulp = ["pulp"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
  "pulp: for PuLP",
]

[tool.mypy]
files = "src"
ignore_missing_imports = true

[tool.ruff]
exclude = [".venv", "nbs"]
line-length = 120
src = ["src"]

[tool.ruff.lint]
ignore = ["ANN", "CPY", "D", "DOC", "E501", "PD901", "PLR0913", "PLR0917", "RUF052", "S102"]
preview = true
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
